--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink: / ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
-highlighter: rouge
+highlighter: pygments
 
 
 ### content configuration ###
