removed `event calendar` from title for SEO

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ permalink : /:year
 
 
 ### content configuration ###
-title:                "Acroyoga Ottawa Event Calendar"
+title:                "Acroyoga Ottawa"
 tagline:              "Acrobatics with a yogic consciousness in a beautiful city"
 keywords:             "Extended mind, memex"
 description:          "Extending our minds"
