--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ permalink : /:year
 ### content configuration ###
 title:                "Acroyoga Ottawa"
 tagline:              "Acrobatics with a yogic consciousness in a beautiful city"
-keywords:             "Extended mind, memex"
-description:          "Extending our minds"
+keywords:             "Acroyoga, Ottawa, Yoga"
+description:          "Acroyoga events in Canada's Capital Region, Ottawa & Gatineau."
 favicon:              "img/favicon.ico"
 touch_icon:           "img/favicon.png"
 contact_name:         "Greg"
