adding Gatineau to description

--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ permalink : /:year
 
 
 ### content configuration ###
-title:                "Acroyoga Ottawa"
+title:                "Acroyoga Ottawa & Gatineau"
 tagline:              "Acrobatics with a yogic consciousness in a beautiful city"
-keywords:             "Acroyoga, Ottawa, Yoga"
+keywords:             "Acroyoga, Ottawa, Gatineau, Yoga"
 description:          "Acroyoga events in Canada's Capital Region, Ottawa & Gatineau."
 favicon:              "img/favicon.ico"
 touch_icon:           "img/favicon.png"
